# AetherLink-SDR-MCP

./: .gitignore  VERIFICATION.md  install.ps1  install.sh  plugins  pyproject.toml  pytest.ini  readme.md  servertest.py
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml  security.yml  test-install.yml
docker/: Dockerfile  docker-compose.yml
examples/: test_client.py
sdr_mcp/: __init__.py  __main__.py  cli.py  server.py
sdr_mcp/analysis/: __init__.py  spectrum.py
sdr_mcp/decoders/: __init__.py  adsb.py  ais.py  base.py  meteor_lrpt.py  noaa_apt.py  pocsag.py  rtl433.py
sdr_mcp/hardware/: __init__.py  base.py  hackrf.py  rtlsdr.py
sdr_mcp/utils/: __init__.py  validators.py
tests/: test_basic.py
