[project]
name = "aetherlink"
version = "0.1.0"
description = "MCP server for SDR control with protocol decoding"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "readme.md"
requires-python = ">=3.10"
keywords = ["sdr", "mcp", "rtl-sdr", "hackrf", "radio", "adsb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pyrtlsdr>=0.3.0",
]

[project.optional-dependencies]
hackrf = ["pyhackrf>=0.2.0"]
decoders = [
    "pyModeS>=2.19",
    "pyais>=2.5.0",
    "construct>=2.10",
]
analysis = [
    "matplotlib>=3.6.0",
    "scikit-rf>=0.29.0",
]
web = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/N-Erickson/AetherLink-SDR-MCP"
Documentation = "https://github.com/N-Erickson/AetherLink-SDR-MCP#readme"
Repository = "https://github.com/N-Erickson/AetherLink-SDR-MCP"
Issues = "https://github.com/N-Erickson/AetherLink-SDR-MCP/issues"

[project.scripts]
aetherlink = "sdr_mcp.server:main"
aetherlink-test = "sdr_mcp.utils.test_hardware:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sdr_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]